--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,13 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1170px;
+  max-width: 1200px;
+}
+
+.section {
+  padding: 120px 0;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .header {
@@ -169,4 +175,230 @@ img {
 }
 .header__button:hover, .header__button:focus {
   background-color: var(--orange-bg);
+}
+
+.hero {
+  background-image: linear-gradient(to right, #ffffff 155px, rgba(25, 28, 38, 0.2) 155px), url("/images/background/hero-bg.jpg");
+  height: 680px;
+  max-width: 1280px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid tomato;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.about__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+.about__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+.about__right {
+  display: block;
+  width: 470px;
+  height: 445px;
+}
+.about__uppertitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.3636363636;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.about__uppertitle::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  display: block;
+  background: var(--main-txt-cl);
+}
+.about__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.05em;
+  margin-bottom: 20px;
+}
+.about__undertitle {
+  display: block;
+  margin-bottom: 20px;
+}
+.about__article {
+  font-size: 14px;
+  line-height: 26px;
+  color: var(--about-txt-cl);
+  margin-bottom: 42px;
+}
+.about__button {
+  padding: 12px 19px;
+  color: var(--main-txt-cl);
+}
+.about__button:hover, .about__button:focus {
+  color: white;
+  -webkit-transition: color var(--animation), background-color var(--animation);
+  transition: color var(--animation), background-color var(--animation);
+}
+
+.customers__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.customers__left {
+  max-width: 370px;
+}
+.customers__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.customers__item {
+  text-align: center;
+  background: var(--secondary-bg);
+  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+  width: 170px;
+  width: 170px;
+  min-height: 133px;
+  padding: 20px 24px;
+  --item: 2;
+}
+.customers__item:nth-child(2n) {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+.customers__amount {
+  display: block;
+  position: relative;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.3571428571;
+  text-align: center;
+  letter-spacing: 0.05em;
+  margin-bottom: 6px;
+}
+.customers__amount::after {
+  content: "+";
+  color: var(--orange-txt-cl);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.375;
+  text-align: center;
+  position: absolute;
+  top: 6px;
+}
+.customers__description {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.3636363636;
+  text-align: center;
+}
+.customers__rigth {
+  margin-left: 130px;
+  width: 500px;
+}
+.customers__title {
+  max-width: 430px;
+}
+.customers__undertitle {
+  margin: 0;
+}
+
+.price {
+  max-width: 1600px;
+  background-image: url("/images/background/price-bg.png");
+  background-color: var(--main-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.price__uppertitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.3636363636;
+  text-transform: uppercase;
+  color: rgba(157, 164, 189, 0.6);
+  margin-bottom: 20px;
+}
+.price__uppertitle::before {
+  display: block;
+  content: "";
+  width: 60px;
+  height: 1px;
+  background: rgba(157, 164, 189, 0.6);
+}
+.price__title {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.05em;
+  color: var(--secondary-txt-cl);
+  margin-bottom: 44px;
+}
+.price__list {
+  margin-bottom: 44px;
+}
+.price__item {
+  width: 570px;
+  background-color: #303030;
+  color: #9da4bd;
+}
+.price__list--service {
+  padding: 30px 20px;
+}
+.price__item--service {
+  margin-bottom: 20px;
+}
+.price__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }/*# sourceMappingURL=main.css.map */
