--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import "./components/form-footer";
 @import "./components/backdrop";
 @import "./components/form-modal";
+@import "./components/social";
 
 //layout styles
 @import "./layout/header";
