--- a/css/main.css
+++ b/css/main.css
@@ -449,21 +449,82 @@ img {
 }
 
 .contact-group {
+  max-width: 1280px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: var(--main-bg);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .booking {
-  width: 785px;
+  padding: 120px 30px 189px 215px;
+  max-width: 785px;
+}
+.booking__left--side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: var(--main-bg);
 }
 .booking__title {
   font-family: "Raleway";
   color: var(--secondary-txt-cl);
+  margin-bottom: 30px;
+}
+.booking__label--align {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 30px;
+}
+.booking__form {
+  max-width: 570px;
 }
 .booking__label {
+  position: relative;
   display: block;
+  height: 36px;
+  margin-bottom: 44px;
+}
+.booking__input {
+  padding: 6px;
+  background-color: inherit;
+  border-style: none;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--hero-back-txt-cl);
+}
+.booking__textarea {
+  display: block;
+  width: 100%;
+  height: 76px;
+  resize: none;
+  margin-bottom: 44px;
+}
+.booking__button {
+  display: block;
+  padding: 12px 38px;
+  width: 160px;
+  height: 40px;
 }
 
 .price {
