--- a/scss/layout/_booking.scss
+++ b/scss/layout/_booking.scss
@@ -1,15 +1,60 @@
 .contact-group {
+    max-width: 1280px;
     display: flex;
-    background-color: var(--main-bg);
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .booking {
-    width: 785px;
+    padding: 120px 30px 189px 215px;
+    &__left--side {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: var(--main-bg);
+    }
+    max-width: 785px;
     &__title {
         font-family: "Raleway";
         color: var(--secondary-txt-cl);
+        margin-bottom: 30px;
+    }
+    &__label--align {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 30px;
+    }
+    &__form {
+        max-width: 570px;
     }
     &__label {
+        position: relative;
         display: block;
+
+        height: 36px;
+        margin-bottom: 44px;
+    }
+    &__input {
+        padding: 6px;
+        background-color: inherit;
+        border-style: none;
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: var(--hero-back-txt-cl);
+    }
+    &__textarea {
+        display: block;
+        width: 100%;
+        height: 76px;
+        resize: none;
+        margin-bottom: 44px;
+    }
+    &__button {
+        display: block;
+        padding: 12px 38px;
+        width: 160px;
+        height: 40px;
     }
 }
