--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -6,7 +6,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    border: 1px solid tomato;
     margin-left: auto;
     margin-right: auto;
+    &__left--side {
+        width: 100px;
+        display: flex;
+        align-items: flex-end;
+    }
+    &__right--side {
+        margin-left: 100px;
+    }
 }
