--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,7 +1,8 @@
 .hero {
+    padding-top: 0;
     background-image: linear-gradient(to right, #ffffff 155px, rgba(25, 28, 38, 0.2) 155px),
         url("/images/background/hero-bg.jpg");
-    height: 680px;
+    //height: 680px;
     max-width: 1280px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -9,22 +10,18 @@
     margin-left: auto;
     margin-right: auto;
     &__container {
-        position: relative;
         display: flex;
     }
     &__left--side {
-        width: 100px;
+        flex-basis: 100px;
         display: flex;
         align-items: flex-end;
     }
-    &__social {
-        margin-bottom: 40px;
-        transform: rotate(-90deg) translateY(26px);
-    }
-    &__social-list {
-        display: flex;
-        align-items: center;
-        gap: 40px;
+    &__right--side {
+        flex-grow: 1;
+        padding-top: 272px;
+        padding-bottom: 206px;
+        padding-left: 100px;
     }
     &__social-list::before {
         content: "";
@@ -33,10 +30,6 @@
         height: 1px;
         background: var(--main-txt-cl);
     }
-    &__right--side {
-        margin-left: 159px;
-    }
-
     &__uppertitle {
         font-family: "Open Sans";
         font-style: normal;
@@ -63,9 +56,21 @@
         width: 360px;
         height: 60px;
     }
-    &__list {
-        position: absolute;
-        top: 50%;
-        right: 35px;
+
+    // SLIDER//
+
+    &__btn {
+        font-weight: 600;
+        font-style: 11px;
+        line-height: calc(15 / 11);
+        letter-spacing: 0.1em;
+        background-color: transparent;
+        color: rgba(157, 164, 189, 0.6);
+        border: none;
+        padding: 0;
+        padding-bottom: 8px;
+        border-bottom: 1px solid rgba(157, 164, 189, 0.6);
+        text-align: right;
+        width: 60px;
     }
 }
